HMS -Podman Appliction Deployed, ELK Run as Container &logs monitored in kibana